<resources>
    <string name="app_name">Dynamo</string>
    <string name="main_button_game_text">Play</string>
    <string name="main_button_exit_text">Exit</string>
    <string name="main_button_options_text">Scores</string>
    <string name="title_activity_settings">Settings</string>
    <string name="time">Time:</string>
    <string name="distance">Distance:</string>
    <string name="score">Score:</string>
    <string name="mainMenu">Main menu</string>
    <string name="loadingText">Loading...</string>
    <string name="enterUserName">Enter your Username</string>
    <string name="go"> Let\'s go</string>
    <string name="username"> Username</string>
    <string name="awesome"> Well Played </string>
</resources>
