<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="landscape"
    tools:context=".Activity.GameOverActivity">

    <SurfaceView
        android:id="@+id/surface_view_gameover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:fontFamily="@font/vt323"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_gameover_time"
        app:layout_constraintEnd_toStartOf="@+id/textview_gameover_time"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:fontFamily="@font/vt323"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_gameover_score"
        app:layout_constraintEnd_toEndOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:fontFamily="@font/vt323"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_gameover_distance_player"
        app:layout_constraintEnd_toEndOf="@+id/textView7" />

    <TextView
        android:id="@+id/awesome"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="575dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="750dp"
        android:text="@string/awesome"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:fontFamily="@font/vt323"
        app:layout_constraintBottom_toTopOf="@+id/button_gameover_mainmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/surface_view_gameover"
        app:layout_constraintVertical_bias="0.381" />

    <TextView
        android:id="@+id/textview_gameover_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:text="0"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:fontFamily="@font/vt323"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_username"
        android:layout_width="174dp"
        android:layout_height="43dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:text="?"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:fontFamily="@font/vt323"
        app:layout_constraintBottom_toTopOf="@+id/surface_view_gameover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/awesome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/textview_gameover_distance_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="0"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:fontFamily="@font/vt323"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textview_gameover_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="0"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:fontFamily="@font/vt323"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/button_gameover_mainmenu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/mainMenu"
        android:background="@drawable/rectangle_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>